missing nil check

--- a/app/views/welcome/index.html.erb
+++ b/app/views/welcome/index.html.erb
@@ -1,7 +1,9 @@
 <center><h1>Look at this Moron.</h1></center>
-<p>
-  <center><h2><%= @moron.description %></h2></center>
-</p>
-<p>
-  <center><%= image_tag @moron.imgur %></center>
-</p>
+<% if @moron != nil %>
+  <p>
+    <center><h2><%= @moron.description %></h2></center>
+  </p>
+  <p>
+    <center><%= image_tag @moron.imgur %></center>
+  </p>
+<% end %>
