Some tweaks to css and front-end.

--- a/app/views/morons/_form.html.erb
+++ b/app/views/morons/_form.html.erb
@@ -12,7 +12,7 @@
   <% end %>
 
   <div class="field">
-    <%= f.label :imgur %><br>
+    Image URL:<br>
     <%= f.text_field :imgur %>
   </div>
   <div class="field">
