--- a/app/views/morons/index.html.erb
+++ b/app/views/morons/index.html.erb
@@ -5,7 +5,7 @@
 <table>
   <thead>
     <tr>
-      <th>Imgur</th>
+      <th>Image URL</th>
       <th>Description</th>
       <th colspan="3"></th>
     </tr>
@@ -14,11 +14,11 @@
   <tbody>
     <% @morons.each do |moron| %>
       <tr>
-        <td><%= moron.imgur %></td>
+        <td><%= link_to 'Link', moron.imgur %></td>
         <td><%= moron.description %></td>
         <td><%= link_to 'Show', moron %></td>
         <td><%= link_to 'Edit', edit_moron_path(moron) %></td>
-        <td><%= link_to 'Destroy', moron, method: :delete, data: { confirm: 'Are you sure?' } %></td>
+        <!-- <td><%= link_to 'Destroy', moron, method: :delete, data: { confirm: 'Are you sure?' } %></td> -->
       </tr>
     <% end %>
   </tbody>
